--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-body {
-  background-image: linear-gradient(180deg, #eee, #fff 100px, #fff);
-}
-
 .container {
   max-width: 960px;
 }
@@ -22,8 +18,12 @@ body {
 .card img {
   max-width: 100%;
 }
+#reset-button {
+  margin: 0 auto;
+  max-width: 250px;
+}
 
-@media (max-width: 400px) {
+@media (max-width: 455px) {
   div.card-header {
     display: none;
   }
